--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -29,6 +29,7 @@ h1,h2,h3{
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
         .template-group-item{
           position: relative;
           height: 300px;
@@ -57,8 +58,8 @@ h1,h2,h3{
             position: absolute;
             width: 110%;
             left: 50%;
-            transform: translateX(-50%);
-            top: 0px;
+            transform: translate(-50%,100%);
+            bottom: 0;
             .hatWithTassel{
               position: relative;
               .tassel{
