--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -59,7 +59,7 @@ h1,h2,h3{
             width: 110%;
             left: 50%;
             transform: translate(-50%,100%);
-            bottom: 0;
+            bottom: -5%;
             .hatWithTassel{
               position: relative;
               .tassel{
@@ -85,4 +85,15 @@ h1,h2,h3{
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+
+@keyframes turnTassel{
+  0%{
+    bottom: -5%;
+    transform: translate(-50%,100%);
+  }
+  100%{
+    bottom: 100%;
+    transform: translate(-50%,0%);
+  }
 }
