更新动画样式

--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -87,6 +87,11 @@ h1,h2,h3{
   transform: translate(-50%,-50%);
 }
 
+.animation_active{
+  .student_theHat{
+    animation: turnTassel 2s;
+  }
+}
 @keyframes turnTassel{
   0%{
     bottom: -5%;
