--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -1,9 +1,21 @@
 body{
   margin: 0;
   padding: 0;
+  position: relative;
+  overflow: hidden;
 }
 h1,h2,h3{
   text-align: center;
+}
+.bg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -11;
+  >img{
+    width: 100%;
+    height: 100%;
+  }
 }
 .turnTheTassel{
   width: 100vw;
@@ -13,14 +25,14 @@ h1,h2,h3{
   flex-direction: column;
   .turnTheTassel-top{
     width: 100%;
-    height: 20vh;
-    background: blue;
+    height: 33vh;
   }
   .turnTheTassel-center{
     flex: 1;
     .turnTheTassel-center-template{
-      width: 100%;
-      height: 100%;
+      margin: auto;
+      width: 920px;
+      height: auto;
       display: flex;
       flex-direction: column;
       .template-group{
@@ -29,11 +41,12 @@ h1,h2,h3{
         display: flex;
         justify-content: center;
         align-items: center;
-        overflow: hidden;
+        flex-wrap: wrap;
         .template-group-item{
           position: relative;
-          height: 300px;
-          margin: 0 16px;
+          height: 200px;
+          margin: 4px 16px;
+          overflow: hidden;
           img{
             width: 100%;
             height: 100%;
@@ -48,10 +61,10 @@ h1,h2,h3{
           }
           .student_cloth{
             width: 145%;
-            height: 110px;
+            height: 38%;
             position: absolute;
             left: 50%;
-            bottom: 0px;
+            bottom: -1px;
             transform: translateX(-50%);
           }
           .student_theHat{
@@ -59,7 +72,8 @@ h1,h2,h3{
             width: 110%;
             left: 50%;
             transform: translate(-50%,100%);
-            bottom: -5%;
+            bottom: -10%;
+            z-index: 111;
             .hatWithTassel{
               position: relative;
               .tassel{
@@ -76,8 +90,7 @@ h1,h2,h3{
   }
   .turnTheTassel-bottom{
     width: 100%;
-    height: 10vh;
-    background: orange;
+    height: 16vh;
   }
 }
 .name{
@@ -89,16 +102,45 @@ h1,h2,h3{
 
 .animation_active{
   .student_theHat{
-    animation: turnTassel 2s;
+    animation: hatRaise 2s;
+    animation-fill-mode: forwards;
+    .hatWithTassel{
+      .tassel{
+        animation: turnTassel 3s;
+        animation-fill-mode: forwards;
+        animation-timing-function:linear;
+      }
+    }
+  }
+}
+@keyframes hatRaise{
+  0%{
+    bottom: -5%;
+    transform: translate(-50%,100%) rotate3d(0,1,0,0deg);
+  }
+  50%{
+    
+  }
+  100%{
+    bottom: 100%;
+    transform: translate(-50%,100%) rotate3d(0,1,0,0deg);
   }
 }
 @keyframes turnTassel{
   0%{
-    bottom: -5%;
-    transform: translate(-50%,100%);
+    left: 10%;
+    top: 35%;
+  }
+  50%{
+    left: 10%;
+    top: 35%;
+  }
+  75%{
+    left: 45%;
+    top:0%;
   }
   100%{
-    bottom: 100%;
-    transform: translate(-50%,0%);
+    left: 80%;
+    top: 35%;
   }
 }
