--- a/App/templates/turn_the_tassel.html
+++ b/App/templates/turn_the_tassel.html
@@ -17,15 +17,26 @@
       <div class="turnTheTassel-top">
       </div>
       <div class="turnTheTassel-center">
-        <div class="turnTheTassel-center-template">
+        <!-- <div class="turnTheTassel-center-template">
           <student_templatea
             :students="allData?.students?.filter((item,index)=>index >= 10 * this.nowGroup && index < 10 * (this.nowGroup + 1))"
             :count="nowCount"
           >
           </student_templatea>
+        </div> -->
+        <div class="template-swiper">
+          <ul ref="swiper">
+            <li v-for="it in groupArrs">
+              <div class="turnTheTassel-center-template">
+                <student_templatea
+                  :students="it"
+                  :count="nowCount"
+                >
+                </student_templatea>
+              </div>
+            </li>
+          </ul>
         </div>
-        <div class="turnTheTassel-center-template"></div>
-        <div class="turnTheTassel-center-template"></div>
       </div>
       <div class="turnTheTassel-bottom">
       </div>
@@ -35,7 +46,7 @@
   <script src="{% static '/js/axios.min.js' %}"></script>
   <script type="text/x-template" id="student_templatea">
     <div class="template-group">
-      <div :class="{'template-group-item':true,'animation_active': count >= index}" v-for="(item,index) in students">
+      <div :class="{'template-group-item':true,'animation_active': count >= item.id}" v-for="(item,index) in students">
         <img :src="'static/'+item.pic_url">
         {% verbatim %}
         <div class="name">
@@ -60,30 +71,74 @@
   </script>
   <script>
     const app = Vue.createApp({
+      computed:{
+        groupNum(){
+          if(this.allData.hasOwnProperty('students')){
+            return Math.ceil(this.allData.students.length / 10)
+          }else{
+            return 0
+          }
+        },
+        groupArrs(){
+          let arrs = [];
+          let tempArrs = [];
+          this.allData.hasOwnProperty('students') && this.allData.students.forEach((item,index)=>{
+            tempArrs = [...tempArrs,item];
+            if((index+1) % 10 == 0 || (index + 1) == this.allData.students.length){
+              arrs = [...arrs,tempArrs];
+              tempArrs = [];
+            }
+          })
+          return arrs
+        },
+        nowData(){
+          return this.allData.students.filter((item,index)=>index >= 10 * this.nowGroup && index < 10 * (this.nowGroup + 1))
+        }
+      },
       data(){
         return {
-          allData:[],
+          allData:{},
           nowClass:0,
           nowGroup:0,
           nowCount:0,
-          message:"Hello world"
+          message:"Hello world",
+          timer:null
         }
       },
-      mounted(){
+      created(){
         axios.get('http://localhost:8000/api/getData/1').then(res=>{
           this.allData = res.data;
         })
-        setInterval(()=>{
+
+
+        /* let arrs = [];
+          let tempArrs
+          this.allData.students.forEach((item,index)=>{
+            tempArrs = [...tempArrs,item];
+            if(index % 10 == 0){
+              arrs = [...arrs,tempArrs];
+              tempArrs = [];
+            }
+          })
+          console.log(arrs); */
+
+        this.timer = setInterval(()=>{
           this.nowCount++;
-        },3000)
+          if(this.nowCount > (this.nowGroup + 1) * 10){
+            this.nowGroup++;
+          }
+          this.nowCount >= this.allData.students.length && clearInterval(this.timer)
+        },500)
+      },
+      watch:{
+        nowGroup(val){
+          this.$refs.swiper.style.top = -416 * val + "px";
+        }
       }
     });
     app.component('student_templatea',{
       props:['students','count'],
-      template:'#student_templatea',
-      mounted(){
-        console.log(this.count);
-      }
+      template:'#student_templatea'
     })
     const vm = app.mount('#app');
   </script>
