--- a/App/static/css/forTurnTheTassel.css
+++ b/App/static/css/forTurnTheTassel.css
@@ -39,17 +39,19 @@ ul li {
 }
 .turnTheTassel .turnTheTassel-center {
   flex: 1;
+  position: relative;
 }
 .turnTheTassel .turnTheTassel-center .turnTheTassel-center-template {
   margin: auto;
   width: 920px;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
 .turnTheTassel .turnTheTassel-center .turnTheTassel-center-template .template-group {
   width: 100%;
   flex: 1;
+  align-self: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,6 +63,10 @@ ul li {
   height: 200px;
   margin: 4px 16px;
   overflow: hidden;
+  box-sizing: border-box;
+  border: 0px;
+  transition-property: border;
+  transition-duration: 0.5s;
 }
 .turnTheTassel .turnTheTassel-center .turnTheTassel-center-template .template-group .template-group-item img {
   width: 100%;
@@ -99,51 +105,100 @@ ul li {
   top: 35%;
   width: 15px;
 }
+.turnTheTassel .turnTheTassel-center .turnTheTassel-center-template .template-group .specialOne {
+  align-self: center;
+  transform: scale(2);
+}
 .turnTheTassel .turnTheTassel-bottom {
   width: 100%;
   height: 16vh;
 }
-.name {
+.student_info {
   position: absolute;
-  top: 50%;
+  bottom: 0%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 0px;
+  z-index: 99;
+  transform: translateX(-50%);
+  background: linear-gradient(to top, #000000, rgba(0, 0, 0, 0.516), rgba(0, 0, 0, 0));
+  color: #fff;
+  text-align: center;
+  opacity: 0;
+  transition-property: opacity,height;
+  transition-duration: 1s;
+}
+.student_info .student_info_name {
+  font-weight: 700;
+  font-size: 20px;
+}
+.student_info_show {
+  height: auto;
+  opacity: 1;
+}
+.animation_active {
+  border: 4px solid yellow!important;
 }
 .animation_active .student_theHat {
-  animation: hatRaise 0.3s;
+  animation: hatRaise 1s;
   animation-fill-mode: forwards;
+  animation-timing-function: linear;
 }
 .animation_active .student_theHat .hatWithTassel .tassel {
-  animation: turnTassel 0.3s;
+  transform-origin: top center;
+  animation: turnTassel 2s;
   animation-fill-mode: forwards;
   animation-timing-function: linear;
 }
 @keyframes hatRaise {
   0% {
     bottom: -5%;
-    transform: translate(-50%, 100%) rotate3d(0, 1, 0, 0deg);
+    transform: translate(-50%, 100%) /* rotate3d(1,0,1,0deg) */;
+  }
+  50% {
+    bottom: 45%;
+    transform: translate(-50%, 100%) /* rotate3d(1,1,0,360deg) */;
   }
   100% {
     bottom: 100%;
-    transform: translate(-50%, 100%) rotate3d(0, 1, 0, 0deg);
+    transform: translate(-50%, 100%) /* rotate3d(1,1,0,720deg) */;
   }
 }
 @keyframes turnTassel {
   0% {
     left: 10%;
     top: 35%;
+    transform: rotate3d(0, 0, 1, 0deg);
   }
   50% {
     left: 10%;
     top: 35%;
+    transform: rotate3d(0, 0, 1, 0deg);
   }
-  75% {
+  60% {
     left: 45%;
     top: 0%;
+    transform: rotate3d(0, 0, 1, 20deg);
+  }
+  70% {
+    left: 62%;
+    top: 15%;
+    transform: rotate3d(1, 0, 1, 20deg);
+  }
+  80% {
+    left: 72%;
+    top: 25%;
+    transform: rotate3d(0, 0, 1, -20deg);
+  }
+  90% {
+    left: 80%;
+    top: 35%;
+    transform: rotate3d(0, 0, 1, 10deg);
   }
   100% {
     left: 80%;
     top: 35%;
+    transform: rotate3d(0, 0, 1, 0deg);
   }
 }
 .template-swiper {
@@ -164,13 +219,38 @@ ul li {
 .template-swiper ul li {
   width: 100%;
   height: 416px;
+  /* &:nth-child(1){
+        background: orange;
+      }
+      &:nth-child(2){
+        background: pink;
+      }
+      &:nth-child(3){
+        background: skyblue;
+      } */
 }
-.template-swiper ul li:nth-child(1) {
-  background: orange;
+.class_page {
+  margin-top: 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
 }
-.template-swiper ul li:nth-child(2) {
-  background: pink;
+.class_page .class_page_desc {
+  width: 100%;
+  color: white;
 }
-.template-swiper ul li:nth-child(3) {
-  background: skyblue;
+.class_page .class_pagae_button {
+  width: 300px;
+  height: 60px;
+  margin: auto;
+  background: linear-gradient(45deg, orange, rgba(255, 166, 0, 0.301));
+  text-align: center;
+  line-height: 60px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  cursor: pointer;
 }
