--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -36,15 +36,17 @@ ul{
   }
   .turnTheTassel-center{
     flex: 1;
+    position: relative;
     .turnTheTassel-center-template{
       margin: auto;
       width: 920px;
-      height: auto;
+      height: 100%;
       display: flex;
       flex-direction: column;
       .template-group{
         width: 100%;
         flex: 1;
+        align-self: center;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,6 +57,10 @@ ul{
           height: 200px;
           margin: 4px 16px;
           overflow: hidden;
+          box-sizing: border-box;
+          border: 0px;
+          transition-property: border;
+          transition-duration: .5s;
           img{
             width: 100%;
             height: 100%;
@@ -93,6 +99,10 @@ ul{
             }
           }
         }
+        .specialOne{
+          align-self: center;
+          transform: scale(2);
+        }
       }
     }
 
@@ -102,20 +112,40 @@ ul{
     height: 16vh;
   }
 }
-.name{
+.student_info{
   position: absolute;
-  top: 50%;
+  bottom: 0%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  width: 100%;
+  height: 0px;
+  z-index: 99;
+  transform: translateX(-50%);
+  background: linear-gradient(to top,rgb(0, 0, 0),rgba(0, 0, 0, 0.516),rgba(0, 0, 0, 0));
+  color: #fff;
+  text-align: center;
+  opacity: 0;
+  transition-property: opacity,height;
+  transition-duration: 1s;
+  .student_info_name{
+    font-weight: 700;
+    font-size: 20px;
+  }
+}
+.student_info_show{
+  height: auto;
+  opacity: 1;
 }
 
 .animation_active{
+  border: 4px solid yellow!important;
   .student_theHat{
-    animation: hatRaise .3s;
+    animation: hatRaise 1s;
     animation-fill-mode: forwards;
+    animation-timing-function: linear;
     .hatWithTassel{
       .tassel{
-        animation: turnTassel .3s;
+        transform-origin: top center;
+        animation: turnTassel 2s;
         animation-fill-mode: forwards;
         animation-timing-function:linear;
       }
@@ -125,32 +155,53 @@ ul{
 @keyframes hatRaise{
   0%{
     bottom: -5%;
-    transform: translate(-50%,100%) rotate3d(0,1,0,0deg);
+    transform: translate(-50%,100%) /* rotate3d(1,0,1,0deg) */;
   }
   50%{
-    
+    bottom: 45%;
+    transform: translate(-50%,100%) /* rotate3d(1,1,0,360deg) */;
   }
   100%{
     bottom: 100%;
-    transform: translate(-50%,100%) rotate3d(0,1,0,0deg);
+    transform: translate(-50%,100%) /* rotate3d(1,1,0,720deg) */;
   }
 }
+
 @keyframes turnTassel{
   0%{
     left: 10%;
     top: 35%;
+    transform: rotate3d(0,0,1,0deg);
   }
   50%{
     left: 10%;
     top: 35%;
+    transform: rotate3d(0,0,1,0deg);
   }
-  75%{
+  60%{
     left: 45%;
     top:0%;
+    transform: rotate3d(0,0,1,20deg);
+  }
+  70%{
+    left: 62%;
+    top:15%;
+    transform: rotate3d(1,0,1,20deg);
+  }
+  80%{
+    left: 72%;
+    top: 25%;
+    transform: rotate3d(0,0,1,-20deg);
+  }
+  90%{
+    left: 80%;
+    top: 35%;
+    transform: rotate3d(0,0,1,10deg);
   }
   100%{
     left: 80%;
     top: 35%;
+    transform: rotate3d(0,0,1,0deg);
   }
 }
 
@@ -170,7 +221,7 @@ ul{
     li{
       width: 100%;
       height: 416px;
-      &:nth-child(1){
+      /* &:nth-child(1){
         background: orange;
       }
       &:nth-child(2){
@@ -178,7 +229,32 @@ ul{
       }
       &:nth-child(3){
         background: skyblue;
-      }
+      } */
     }
+  }
+}
+.class_page{
+  margin-top: 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  .class_page_desc{
+    width: 100%;
+    color: white;
+  }
+  .class_pagae_button{
+    width: 300px;
+    height: 60px;
+    margin: auto;
+    background: linear-gradient(45deg,orange,rgba(255, 166, 0, 0.301));
+    text-align: center;
+    line-height: 60px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    cursor: pointer;
   }
 }
